--- a/index.html
+++ b/index.html
@@ -3,26 +3,109 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/estilos.css ">
 </head>
 <body>
-	<header class="header">
-		
+	<header class="header relative border-bottom">
+		<a href="#" class="button-menu">*</a>
+		<nav class="menu">
+			 <ul class="list">
+			 	<li class="item">
+			 		<a href="#">Más Escuchados</a>
+			 	</li>
+			 	<li class="item">
+			 		<a href="#">Mis Favoritos</a>
+			 	</li>
+			 	<li class="item">
+			 		<a href="#">Más Escuchados</a>
+			 	</li>
+			 	<li class="item">
+			 		<a href="#">Más Escuchados</a>
+			 	</li>
+			 	<li class="item">
+			 		<a href="#">Más Escuchados</a>
+			 	</li>
+			 	<li class="item">
+			 		<a href="#">Más Escuchados</a>
+			 	</li>
+			 </ul>
+		</nav>
+		<div class="title">
+			<span>
+				Más Escuchadas
+			</span>
+		</div>
 	</header>
 	<section class="container">
 		<article class="sermon">
 			<figure class="image">
-				<img src="" alt="">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
 			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
 		</article>
-		<p class="name">
-			Juan 9:13-28
-		</p>
-		<p class="author">
-			Efraín Medina
-		</p>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
 		
 	</section>
 	
 </body>
-</html>
+</html> 
