avance para desktop

--- a/index.html
+++ b/index.html
@@ -3,32 +3,46 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Document</title>
+	<title>Estudios Bíblicos</title>
 	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/estilos.css ">
 </head>
 <body>
 	<header class="header relative border-bottom">
+		<div class="logo">
+			<div class="wrap center-block">
+				<figure class="image isotipo left">
+					<img src="img/logo.png" alt="Estudios Bíblicos">
+				</figure>	
+				<div class="user right">			
+					<figure class="left avatar round">
+						<img src="img/avatares/daniel.jpg" alt="@darkniel" width="38" height="38">
+					</figure>
+					<span class="left username">@darkniel</span>
+				</div>
+				<div class="search right">
+					<form action="" class="relative">
+						<span class="icon-search search-icon "></span>
+						<input type="text" value="" placeholder="ejemplo: Juan 9:13-28" class="input">
+						<span class="close-icon">x</span>
+					</form>
+				</div>	
+			</div>			
+		</div>
 		<a href="#" class="button-menu icon-menu"></a>
 		<nav class="menu">
-			 <ul class="list">
+			 <ul class="list center-block wrap">
 			 	<li class="item">
 			 		<a href="#">Más Escuchados</a>
 			 	</li>
 			 	<li class="item">
-			 		<a href="#">Mis Favoritos</a>
+			 		<a href="#">Perfil</a>
 			 	</li>
 			 	<li class="item">
-			 		<a href="#">Más Escuchados</a>
+			 		<a href="#">Configuraciones</a>
 			 	</li>
 			 	<li class="item">
-			 		<a href="#">Más Escuchados</a>
-			 	</li>
-			 	<li class="item">
-			 		<a href="#">Más Escuchados</a>
-			 	</li>
-			 	<li class="item">
-			 		<a href="#">Más Escuchados</a>
+			 		<a href="#">Lista de Reproducción</a>
 			 	</li>
 			 </ul>
 		</nav>
@@ -38,7 +52,7 @@
 			</span>
 		</div>
 	</header>
-	<section class="playing small center-block">
+	<section class="playing small medium center-block">
 		<figure class="image relative">
 			<img src="img/sermones/juan-playing.jpg" width="320px" height="320px" alt="Juan 9:13-28 Efraín Medina">
 			<div class="actions padding right-text">
@@ -77,6 +91,72 @@
 		</div>
 	</section>
 	<section class="container">
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
+		<article class="sermon">
+			<figure class="image">
+				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
+			</figure>
+			<p class="name">
+				Juan 9:13-28
+			</p>
+			<p class="author">
+				Efraín Medina
+			</p>
+		</article>
 		<article class="sermon">
 			<figure class="image">
 				<img src="img/sermones/juan.jpg" width="128px" height="128px" alt="Juan 9:13-28 Efraín Medina">
