--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="wrap center-block">
 				<figure class="image isotipo left">
 					<img src="img/logo.png" alt="Estudios Bíblicos">
-				</figure>	
+				</figure>
 				<div class="user right">			
 					<figure class="left avatar round">
 						<img src="img/avatares/daniel.jpg" alt="@darkniel" width="38" height="38">
@@ -52,42 +52,124 @@
 			</span>
 		</div>
 	</header>
-	<section class="playing small medium center-block">
-		<figure class="image relative">
-			<img src="img/sermones/juan-playing.jpg" width="320px" height="320px" alt="Juan 9:13-28 Efraín Medina">
-			<div class="actions padding right-text">
-				<a href="" class="action icon-add"></a>
-				<a href="" class="action icon-love"></a>
-				<a href="" class="action icon-share"></a>
-			</div>
-		</figure>
-		<div class="padding">
-			<div class="progress">
-				<span class="min">0:45</span>
-				<div class="total">
-					<div class="state">
-						<div class="circle">
-							
+	<section class="playing small medium large">
+		<div class="estudio">
+			<figure class="image relative">
+				<img src="img/sermones/juan-playing.jpg" width="320px" height="320px" alt="Juan 9:13-28 Efraín Medina">
+				<div class="actions padding right-text">
+					<a href="" class="action icon-add"></a>
+					<a href="" class="action icon-love"></a>
+					<a href="" class="action icon-share"></a>
+				</div>
+			</figure>
+			<div class="padding">
+				<div class="progress">
+					<span class="min">0:45</span>
+					<div class="total">
+						<div class="state">
+							<div class="circle">
+								
+							</div>
 						</div>
 					</div>
+					<span class="max">4:10</span>
 				</div>
-				<span class="max">4:10</span>
+				<div class="description center-text border-bottom">
+					<p class="name">
+						Juan 9:13-28
+					</p>
+					<p class="author">
+						Efraín Medina
+					</p>
+				</div>
+				<div class="play center-text padding-tb">
+					<a href="" class="action gray icon-prev"></a>
+					<a href="" class="action gray icon-play"></a>
+					<a href="" class="action gray icon-next"></a>
+					<a href="" class="action gray icon-random"></a>
+					<a href="" class="action gray icon-vol"></a> 
+				</div>
 			</div>
-			<div class="description center-text border-bottom">
-				<p class="name">
-					Juan 9:13-28
-				</p>
-				<p class="author">
-					Efraín Medina
-				</p>
-			</div>
-			<div class="play center-text padding-tb">
-				<a href="" class="action gray icon-prev"></a>
-				<a href="" class="action gray icon-play"></a>
-				<a href="" class="action gray icon-next"></a>
-				<a href="" class="action gray icon-random"></a>
-				<a href="" class="action gray icon-vol"></a> 
-			</div>
+		</div>
+		<div class="playlist right">
+			 <p class="name">
+			 	Juan 9:13-28
+			 </p>
+			 <p class="author">
+			 	Efraín Medina
+			 </p>
+			 <ul class="list">
+			 	<li class="item border-bottom">
+			 		<span>
+			 			Juan 9:29-34
+			 		</span>
+			 		<span class="right">
+				 		<a href="" class="action icon-add gray"></a>
+				 		<a href="" class="action icon-love gray"></a>
+				 		<a href="" class="action icon-share gray"></a>
+			 		</span>
+			 	</li>
+			 	<li class="item border-bottom">
+			 		<span>
+			 			Juan 9:29-34
+			 		</span>
+			 		<span class="right">
+				 		<a href="" class="action icon-add gray"></a>
+				 		<a href="" class="action icon-love gray"></a>
+				 		<a href="" class="action icon-share gray"></a>
+			 		</span>
+			 	</li>
+			 	<li class="item border-bottom">
+			 		<span>
+			 			Juan 9:29-34
+			 		</span>
+			 		<span class="right">
+				 		<a href="" class="action icon-add gray"></a>
+				 		<a href="" class="action icon-love gray"></a>
+				 		<a href="" class="action icon-share gray"></a>
+			 		</span>
+			 	</li>
+			 	<li class="item border-bottom">
+			 		<span>
+			 			Juan 9:29-34
+			 		</span>
+			 		<span class="right">
+				 		<a href="" class="action icon-add gray"></a>
+				 		<a href="" class="action icon-love gray"></a>
+				 		<a href="" class="action icon-share gray"></a>
+			 		</span>
+			 	</li>
+			 	<li class="item border-bottom">
+			 		<span>
+			 			Juan 9:29-34
+			 		</span>
+			 		<span class="right">
+				 		<a href="" class="action icon-add gray"></a>
+				 		<a href="" class="action icon-love gray"></a>
+				 		<a href="" class="action icon-share gray"></a>
+			 		</span>
+			 	</li>
+			 	<li class="item border-bottom">
+			 		<span>
+			 			Juan 9:29-34
+			 		</span>
+			 		<span class="right">
+				 		<a href="" class="action icon-add gray"></a>
+				 		<a href="" class="action icon-love gray"></a>
+				 		<a href="" class="action icon-share gray"></a>
+			 		</span>
+			 	</li>
+			 	<li class="item border-bottom">
+			 		<span>
+			 			Juan 9:29-34
+			 		</span>
+			 		<span class="right">
+				 		<a href="" class="action icon-add gray"></a>
+				 		<a href="" class="action icon-love gray"></a>
+				 		<a href="" class="action icon-share gray"></a>
+			 		</span>
+			 	</li>
+			 </ul>
 		</div>
 	</section>
 	<section class="container">
