librerías de _(), backbone y $ añadidas

--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@
 		</article>
 		
 	</section>
-	
+
+	<script src="lib/underscore.js"></script>
+	<script src="lib/jquery-1.11.2.js"></script>
+	<script src="lib/backbone.js"></script>
+
 </body>
 </html> 
