--- a/index.html
+++ b/index.html
@@ -307,10 +307,21 @@
 		</article>
 		
 	</section>
+	<script type="text/x-handlebars-template" id="sermon-template">
+	    <span>
+ 			{{name}} - {{author}}
+ 		</span>
+ 		<span class="right">
+	 		<a href="" class="action icon-add gray"></a>
+	 		<a href="" class="action icon-love gray"></a>
+	 		<a href="" class="action icon-share gray"></a>
+ 		</span>
+	</script>
 
 	<script src="lib/underscore.js"></script>
 	<script src="lib/jquery-1.11.2.js"></script>
 	<script src="lib/backbone.js"></script>
-
+	<script src="lib/handlebars-v2.0.0.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html> 
